--- a/alacritty/alacritty.toml
+++ b/alacritty/alacritty.toml
@@ -24,7 +24,8 @@ white = "#a0a0a0"
 yellow = "#F9AF4F"
 
 [colors.primary]
-background = "#0A0E14"
+#background = "#0A0E14"
+background = "#000000"
 foreground = "#eeffff"
 
 [cursor]
@@ -39,7 +40,7 @@ TERM = "alacritty"
 size = 9.0
 
 [font.normal]
-style = "Regular"
+	style = "MesloLGS NF"
 
 [mouse]
 hide_when_typing = true
